-removed permissions.js and added it to the main file as it was too small. - added dark mode scroll bar to modal creation menu. - created hotkeys.js to export everything about hotkeys. - fixed a bug where there notification request would be requested from the desktop even though the files are in the documents folder.

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,25 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	scrollbar-width: 0;
+	transition: background 0.5s ease;
 }
 
-body {
-	transition: background 0.3s ease;
+.dark-scrollbar::-webkit-scrollbar {
+	width: 12px;
+}
+
+.dark-scrollbar::-webkit-scrollbar-track {
+	background: #2d2d2d;
+}
+
+.dark-scrollbar::-webkit-scrollbar-thumb {
+	background-color: #5a5a5a;
+	border-radius: 10px;
+	border: 3px solid transparent;
+}
+
+.dark-scrollbar::-webkit-scrollbar-thumb:hover {
+	background-color: #7a7a7a;
 }
 
 .tab-content {
@@ -66,13 +81,13 @@ body {
 }
 
 .reminder-item button {
-	background-color: rgb(0,100,150,0.7);
+	background-color: rgb(0, 100, 150, 0.7);
 	border-radius: 8px;
 	padding: 2px 12px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 	border: 1px solid black;
 }
 
